# tizenclaw

./: repo_config.ini
packaging/: tizenclaw.spec
rvc-tidl-test/: CMakeLists.txt  README.md  main.cc
rvc-tidl-test/packaging/: rvc-tidl-test.spec
rvc-tidl-test/tidl/: rvc_local.cc
src/libtizenclaw-core/src/tizen_sys/: mod.rs
tools/cli/: CMakeLists.txt  index.md
tools/cli/robotic-vacuum-cli/: INSTRUCTIONS.md
tools/cli/rvc-local-cli/: CMakeLists.txt  INSTRUCTIONS.md  main.cc  tool.md
tools/cli/rvc-local-cli/tidl/: rvc_local.h  rvc_local.tidl
