CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(rvc-tidl-test CXX)

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(DEPS REQUIRED
  capi-rpc-port
  bundle
  dlog)

ADD_EXECUTABLE(rvc-tidl-test
  main.cc
  tidl/rvc_local.cc)

TARGET_INCLUDE_DIRECTORIES(rvc-tidl-test PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${DEPS_INCLUDE_DIRS})

TARGET_COMPILE_OPTIONS(rvc-tidl-test PRIVATE
  ${DEPS_CFLAGS_OTHER}
  -fPIE)

SET_TARGET_PROPERTIES(rvc-tidl-test PROPERTIES LINK_FLAGS "-pie")

TARGET_LINK_LIBRARIES(rvc-tidl-test
  ${DEPS_LIBRARIES})

INSTALL(TARGETS rvc-tidl-test DESTINATION /usr/bin)
