AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}
  SRCS)

ADD_EXECUTABLE(${TARGET_RVC_LOCAL_CLI}
  ${SRCS})

SET_TARGET_PROPERTIES(
  ${TARGET_RVC_LOCAL_CLI}
  PROPERTIES COMPILE_FLAGS "-fPIE")
SET_TARGET_PROPERTIES(
  ${TARGET_RVC_LOCAL_CLI}
  PROPERTIES LINK_FLAGS "-pie")

# No external library dependencies — pure C++ stdlib + POSIX system().
# APPLY_PKG_CONFIG is intentionally omitted.

SET(INSTALL_DIR
  "${APP_DATA_DIR}/tools/cli/${TARGET_RVC_LOCAL_CLI}")

INSTALL(TARGETS ${TARGET_RVC_LOCAL_CLI}
  DESTINATION ${INSTALL_DIR})
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/tool.md"
  DESTINATION ${INSTALL_DIR})
