AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}
  SRCS)

LIST(APPEND SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/tidl/rvc_local.cc)

ADD_EXECUTABLE(${TARGET_RVC_LOCAL_CLI}
  ${SRCS})

SET_TARGET_PROPERTIES(
  ${TARGET_RVC_LOCAL_CLI}
  PROPERTIES COMPILE_FLAGS "-fPIE")
SET_TARGET_PROPERTIES(
  ${TARGET_RVC_LOCAL_CLI}
  PROPERTIES LINK_FLAGS "-pie")

APPLY_PKG_CONFIG(${TARGET_RVC_LOCAL_CLI} REQUIRED
  capi-rpc-port
  bundle
  dlog)

SET(INSTALL_DIR
  "${APP_DATA_DIR}/tools/cli/${TARGET_RVC_LOCAL_CLI}")

INSTALL(TARGETS ${TARGET_RVC_LOCAL_CLI}
  DESTINATION ${INSTALL_DIR})
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/tool.md"
  DESTINATION ${INSTALL_DIR})
